feat: add find tasks option
